# sdl2_cmake_game_template

./: CMakeLists.txt  CMakeSettings.json  README.md
Client/: CMakeLists.txt
Client/src/: client.cpp  client.h
Engine/: CMakeLists.txt
Engine/include/: engine.h
Engine/src/: engine.cpp
RatsWorld/: CMakeLists.txt  RatsWorld.cpp  RatsWorld.h
Server/: CMakeLists.txt
Server/src/: server.cpp  server.h
cmake/: FindSDL2.cmake
